mongoDB read query

--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
 body {
-    background-color: cyan;
+    background-color: darkslategrey;
+}
+h1 {
+    color: whitesmoke;
+    text-align: center;
 }
