added bootstrap, font awesome

--- a/templates/jsLibsTemplate.html
+++ b/templates/jsLibsTemplate.html
@@ -1,4 +1,4 @@
-<h2>testN</h2>
+<h2>testN1</h2>
 <!-- xenoScripts -->
 <script type="text/javascript" src="js_libs/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="js_libs/tipsy/jquery.tipsy.js"></script>
