--- a/css/0menu.css
+++ b/css/0menu.css
@@ -1,7 +1,6 @@
-.block500 {
-    padding-left: 10px ;
-    width: 500px;
-    height: 200px;
+.list-group {
+    width: 50%;
+    padding: 2%;
 }
 
 .list-group-item:hover {
